h/.metadata/.plugins/org.eclipse.cdt.ui/Ultrasonic_Sensor.build.log
13:06:10 **** Incremental Build of configuration Debug for project Ultrasonic_Sensor ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:26:
../Core/Inc/lcd16x2_i2c.h:19:1: warning: "/*" within comment [-Wcomment]
   19 | /**
      |  
../Core/Inc/lcd16x2_i2c.h:20:61: warning: "/*" within comment [-Wcomment]
   20 |  * @brief Display ON/OFF, to hide all characters, but not cl/*
      |                                                              
In file included from ../Core/Inc/lcd16x2_i2c.h:27,
                 from ../Core/Src/main.c:26:
../Core/Inc/lcd16x2_i2c.h:19:1: warning: "/*" within comment [-Wcomment]
   19 | /**
      |  
../Core/Inc/lcd16x2_i2c.h:20:61: warning: "/*" within comment [-Wcomment]
   20 |  * @brief Display ON/OFF, to hide all characters, but not cl/*
      |                                                              
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:124:41: warning: format '%ld' expects argument of type 'long int', but argument 2 has type 'int' [-Wformat=]
  124 |                    printf("ADC Value: %ld\r\n", value); // Add this line for debugging
      |                                       ~~^       ~~~~~
      |                                         |       |
      |                                         |       int
      |                                         long int
      |                                       %d
../Core/Src/main.c:126:28: warning: passing argument 1 of 'sprintf' from incompatible pointer type [-Wincompatible-pointer-types]
  126 |                    sprintf(uartBuffer, "Temperature: %.4f C\r\n", temperature);
      |                            ^~~~~~~~~~
      |                            |
      |                            float *
In file included from ../Core/Src/main.c:25:
/opt/st/stm32cubeide_1.13.2/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.linux64_1.1.1.202309131626/tools/arm-none-eabi/include/stdio.h:254:18: note: expected 'char * restrict' but argument is of type 'float *'
  254 | int     sprintf (char *__restrict, const char *__restrict, ...)
      |                  ^
../Core/Src/main.c:127:24: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
  127 |                    if (HAL_UART_Transmit(&huart2,uartBuffer, strlen(uartBuffer), HAL_MAX_DELAY) == HAL_OK)
      |                        ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:127:43: error: 'huart2' undeclared (first use in this function)
  127 |                    if (HAL_UART_Transmit(&huart2,uartBuffer, strlen(uartBuffer), HAL_MAX_DELAY) == HAL_OK)
      |                                           ^~~~~~
../Core/Src/main.c:127:43: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:127:69: warning: passing argument 1 of 'strlen' from incompatible pointer type [-Wincompatible-pointer-types]
  127 |                    if (HAL_UART_Transmit(&huart2,uartBuffer, strlen(uartBuffer), HAL_MAX_DELAY) == HAL_OK)
      |                                                                     ^~~~~~~~~~
      |                                                                     |
      |                                                                     float *
In file included from ../Core/Src/main.c:24:
/opt/st/stm32cubeide_1.13.2/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.linux64_1.1.1.202309131626/tools/arm-none-eabi/include/string.h:41:18: note: expected 'const char *' but argument is of type 'float *'
   41 | size_t   strlen (const char *);
      |                  ^~~~~~~~~~~~
../Core/Src/main.c:76:10: warning: unused variable 'numTicks' [-Wunused-variable]
   76 | uint32_t numTicks = 0;
      |          ^~~~~~~~
In file included from ../Core/Src/main.c:26:
../Core/Src/main.c: At top level:
../Core/Inc/lcd16x2_i2c.h:71:13: warning: 'lcd16x2_i2c_sendCommand' declared 'static' but never defined [-Wunused-function]
   71 | static void lcd16x2_i2c_sendCommand(uint8_t command);
      |             ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Inc/lcd16x2_i2c.h:74:13: warning: 'lcd16x2_i2c_sendData' declared 'static' but never defined [-Wunused-function]
   74 | static void lcd16x2_i2c_sendData(uint8_t data);
      |             ^~~~~~~~~~~~~~~~~~~~
../Core/Inc/lcd16x2_i2c.h:66:16: warning: 'LCD_I2C_SLAVE_ADDRESS' defined but not used [-Wunused-variable]
   66 | static uint8_t LCD_I2C_SLAVE_ADDRESS=0;
      |                ^~~~~~~~~~~~~~~~~~~~~
../Core/Inc/lcd16x2_i2c.h:65:27: warning: 'lcd16x2_i2cHandle' defined but not used [-Wunused-variable]
   65 | static I2C_HandleTypeDef* lcd16x2_i2cHandle;
      |                           ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

13:06:11 Build Failed. 2 errors, 13 warnings. (took 938ms)

